Created a Post CRUD and Documentation
