# routes/api.php
@@ -1,14 +1,14 @@
 <?php
 
-use Illuminate\Support\Facades\Route;
-use Illuminate\Http\JsonResponse;
+  use Illuminate\Support\Facades\Route;
+  use Illuminate\Http\JsonResponse;
 
-Route::get("blogs", "BlogController@index");
-Route::get("blogs/{cd_blog}", "BlogController@show");
-Route::post("blogs", "BlogController@store");
-Route::put("blogs/{cd_blog}", "BlogController@update");
-Route::delete("blogs/{cd_blog}", "BlogController@destroy");
+  Route::get("posts",           "PostController@index");
+  Route::get("posts/{post}",    "PostController@show");
+  Route::post("posts",          "PostController@store");
+  Route::put("posts/{post}",    "PostController@update");
+  Route::delete("posts/{post}", "PostController@destroy");
 
-Route::fallback(function(){
+  Route::fallback(function() {
     return response()->json(['error' => 'Método não encontrado.'], JsonResponse::HTTP_METHOD_NOT_ALLOWED);
-});
+  });
